Changed title of contact page

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Nick's Portfolio</title>
+		<title>Contact Nick Hoke</title>
 		<link rel="shortcut icon"
 			href="https://www.wikipedia.org/static/favicon/wikipedia.ico">
 		<link rel="stylesheet" type="text/css"
