Grammar correction in work page header

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 				non-profit organization. In my free time I like to weightlift, play golf,
 				and explore new bars.
 			</p>
-			<p>This page is about myself. Within web development, I enjoy:</p>
+			<p>Within web development, I enjoy:</p>
 			<ul>
 				<li class="enjoy_list">Front-End Development</li>
 				<li class="enjoy_list">Back-End Development</li>
