Revert "Grammar correction in work page header"
This reverts commit 894c115dd170708944e6d54c58ef77f30e545073.

--- a/work.html
+++ b/work.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.production.css">
     </head>
     <body>
-        <!-- Header including the logo and the main navigation -->
+        <!-- Header including the logo and teh main navigation -->
         <header class="page-header">
             <!-- Add Logo Here -->
             <img src="img/header_logo.jpg" alt="logo">
