Changed title for about navigation name

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					</li>
 					<li role="presentation">
 						<a href="about.html" role="menuitem"
-							class="navigation-list__item">About</a>
+							class="navigation-list__item">About Nick</a>
 					</li>
 					<li role="presentation">
 						<a href="work.html" role="menuitem"
