Formatted HMTL and CSS

--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,6 +14,7 @@
             rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/style.production.css">
     </head>
+
     <body>
         <!-- Header including the logo and the main navigation -->
         <header class="page-header">
@@ -98,4 +99,5 @@
         </footer>
         <script src="js/tota11y.min.js"></script>
     </body>
+
 </html>
