--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,23 +14,21 @@
 			rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/style.production.css">
 	</head>
+
 	<body>
 		<header class="page-header">
 			<img src="img/header_logo.jpg" alt="logo">
 			<nav class="main-navigation page-header__item">
 				<ul role="menubar" class="navigation-list">
 					<li role="presentation">
-						<a href="index.html" role="menuitem"
-							class="navigation-list__item
+						<a href="index.html" role="menuitem" class="navigation-list__item
 							navigation-list__item--active">Home</a>
 					</li>
 					<li role="presentation">
-						<a href="about.html" role="menuitem"
-							class="navigation-list__item">About</a>
+						<a href="about.html" role="menuitem" class="navigation-list__item">About</a>
 					</li>
 					<li role="presentation">
-						<a href="work.html" role="menuitem"
-							class="navigation-list__item">Work</a>
+						<a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
 					</li>
 					<li role="presentation">
 						<a href="contact.html" role="menuitem"
@@ -75,4 +73,5 @@
 		</footer>
 		<script src="js/tota11y.min.js"></script>
 	</body>
+
 </html>
