--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 							class="navigation-list__item navigation-list__item--active">Home</a>
 					</li>
 					<li role="presentation">
-						<a href="about.html" role="menuitem" class="navigation-list__item">About
-							Nick</a>
+						<a href="about.html" role="menuitem" class="navigation-list__item">About</a>
 					</li>
 					<li role="presentation">
 						<a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
