Updated with projects

--- a/work.html
+++ b/work.html
@@ -1,103 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Nick Hoke's Projects</title>
-        <link rel="shortcut icon"
-            href="https://www.wikipedia.org/static/favicon/wikipedia.ico">
-        <link rel="stylesheet" type="text/css"
-            href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-            />
-        <link
-            href="https://fonts.googleapis.com/css?family=Baloo+Thambi+2:400,700&display=swap"
-            rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="css/style.production.css">
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Nick Hoke's Projects</title>
+    <link
+      rel="shortcut icon"
+      href="https://www.wikipedia.org/static/favicon/wikipedia.ico"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Baloo+Thambi+2:400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="css/style.production.css" />
+  </head>
 
-    <body>
-        <!-- Header including the logo and the main navigation -->
-        <header class="page-header">
-            <!-- Add Logo Here -->
-            <img src="img/header_logo.jpg" alt="logo">
-            <nav class="main-navigation page-header__item">
-                <ul role="menubar" class="navigation-list">
-                    <li role="presentation">
-                        <a href="index.html" role="menuitem"
-                            class="navigation-list__item">Home</a>
-                    </li>
-                    <li role="presentation">
-                        <a href="about.html" role="menuitem"
-                            class="navigation-list__item">About</a>
-                    </li>
-                    <li role="presentation">
-                        <a href="work.html" role="menuitem"
-                            class="navigation-list__item
-                            navigation-list__item--active">Work</a>
-                    </li>
-                    <li role="presentation">
-                        <a href="contact.html" role="menuitem"
-                            class="navigation-list__item">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <!-- Main Content-->
-        <section>
-            <h1>Work</h1>
-            <div class="project_list">
-                <!-- Grid items will live here-->
-                <div class="grid_item">
-                    <h2>Mobile web app</h2>
-                    <p> Within this project, I was responsible for the frontend.
-                        It’s written in React.js. Additionally, I've created the
-                        HTML and CSS templates</p>
-                    <a href="#">See project on GitHub</a>
-                </div>
-                <div class="grid_item">
-                    <h2>Native MacOS application</h2>
-                    <p> Within this project, I was responsible for the
-                        front-end. It was written in JavaFX.</p>
-                    <a href="#">See project on GitHub</a>
-                </div>
-                <div class="grid_item">
-                    <h2>Node.js pdf generation</h2>
-                    <p> Within this project I created a service that generates a
-                        pdf out of webpages with the help of a node.js server.</p>
-                    <a href="#">See project on GitHub</a>
-                </div>
-                <div class="grid_item">
-                    <h2>Styleguide for portfolio page</h2>
-                    <p> Here you can find the styleguide I've created for this
-                        portfolio page. It was created with the livingstyleguide
-                        gem and grunt.</p>
-                    <a href="#">See styleguide</a>
-                </div>
-                <div class="grid_item">
-                    <h2>Medium Blog</h2>
-                    <p> I am also writing on medium.com about React.js.</p>
-                    <a href="#">Read my latest blogpost</a>
-                </div>
-                <div class="grid_item">
-                    <h2>Your project</h2>
-                    <p> I can help in realizing front-end and back-end projects
-                        with the following technologies: React.js, JavaScript,
-                        Java, JavaFX, HTML and CSS. I am also happy to learn
-                        other technologies if needed.</p>
-                    <a href="#">Contact Me</a>
-                </div>
-            </div>
-        </section>
-        <!-- Footer with links to social media profiles -->
-        <footer class="page-footer">
-            <p>Find me on:</p>
-            <div class="social-media">
-                <img src="img/github_icon.svg" alt="Github">
-                <img src="img/facebook_icon.svg" alt="Facebook">
-                <img src="img/instagram_icon.svg" alt="Instagram">
-            </div>
-        </footer>
-        <script src="js/tota11y.min.js"></script>
-    </body>
+  <body>
+    <!-- Header including the logo and the main navigation -->
+    <header class="page-header">
+      <!-- Add Logo Here -->
+      <img src="img/header_logo.jpg" alt="logo" />
+      <nav class="main-navigation page-header__item">
+        <ul role="menubar" class="navigation-list">
+          <li role="presentation">
+            <a href="index.html" role="menuitem" class="navigation-list__item"
+              >Home</a
+            >
+          </li>
+          <li role="presentation">
+            <a href="about.html" role="menuitem" class="navigation-list__item"
+              >About</a
+            >
+          </li>
+          <li role="presentation">
+            <a
+              href="work.html"
+              role="menuitem"
+              class="navigation-list__item navigation-list__item--active"
+              >Work</a
+            >
+          </li>
+          <li role="presentation">
+            <a href="contact.html" role="menuitem" class="navigation-list__item"
+              >Contact</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <!-- Main Content-->
+    <section>
+      <h1 class="page_title">My Projects</h1>
+      <div class="project_list">
+        <!-- Grid items will live here-->
+        <div class="grid_item">
+          <h2>Portfolio Site</h2>
+          <p>Static website built with HTML and CSS (this website).</p>
+          <a href="https://nickhoke24.github.io/portfolio-website/"
+            >Project Website</a
+          ><br />
+          <a href="https://github.com/nickhoke24/portfolio-website.git"
+            >GitHub Repository</a
+          >
+        </div>
+        <div class="grid_item">
+          <h2>Pokedex</h2>
+          <p>
+            The Pokedex is a small web application built with HTML, CSS, and
+            JavaScript that loads data from an external API and enables the
+            viewing of data points in detail.
+          </p>
+          <a href="https://nickhoke24.github.io/jquery-pokedex/"
+            >Project Website</a
+          ><br />
+          <a href="https://github.com/nickhoke24/jquery-pokedex.git"
+            >GitHub Repository</a
+          >
+        </div>
+        <div class="grid_item">
+          <h2>MyFlix Database</h2>
+          <p>
+            Full stack project built with MongoDB, Express.js, React and Node.js
+            (MERN). Users can register or login to access the database of movies
+            where they can check out director and genre information, and add or
+            remove favorite movies.
+          </p>
+          <a href="https://myflixdbnickhoke.herokuapp.com/client"
+            >Project Website</a
+          ><br />
+          <a href="https://github.com/nickhoke24/movie.api.git"
+            >GitHub Repository</a
+          >
+        </div>
+        <div class="grid_item">
+          <h2>Quiz App</h2>
+          <p>
+            Written with AngularJs, a front-end ap where users can choose to
+            take various quizzes. Once completed, a user can see their results
+            and go back to choose another quiz.
+          </p>
+          <a href="https://nickhoke24.github.io/my-awesome-quiz-app/welcome"
+            >Project Website</a
+          ><br />
+          <a href="https://github.com/nickhoke24/my-awesome-quiz-app.git"
+            >GitHub Repository</a
+          >
+        </div>
+        <div class="grid_item">
+          <h2>ToDo List</h2>
+          <p>
+            Created with Vue.js, users can add new items, edit the list, mark
+            objects as completed and delete items from list.
+          </p>
+          <a href="https://nickhoke24.github.io/to-do-list-vuejs/"
+            >Project Website</a
+          ><br />
+          <a href="https://github.com/nickhoke24/to-do-list-vuejs.git"
+            >GitHub Repository</a
+          >
+        </div>
+        <div class="grid_item">
+          <h2>Your project</h2>
+          <p>
+            I can help in realizing front-end and back-end projects with the
+            following technologies: HTML, CSS, JavaScript, MongoDB, Express,
+            React, Node.js, and Angular. I am also happy to learn other
+            technologies if needed.
+          </p>
+          <a href="https://nickhoke24.github.io/portfolio-website/contact.html"
+            >Contact Me</a
+          >
+        </div>
+      </div>
+    </section>
+    <!-- Footer with links to social media profiles -->
+    <footer class="page-footer">
+      <p>Find me on:</p>
+      <div class="social-media">
+        <a href="https://github.com/nickhoke24"
+          ><img src="img/github_icon.svg" alt="Github"
+        /></a>
 
+        <a href="https://www.linkedin.com/in/nickhoke24"
+          ><img src="img/facebook_icon.svg" alt="LinkedIn"
+        /></a>
+
+        <a href="https://www.instagram.com/nickhoke24/"
+          ><img src="img/instagram_icon.svg" alt="Instagram"
+        /></a>
+      </div>
+    </footer>
+    <script src="js/tota11y.min.js"></script>
+  </body>
 </html>
