Updated Social Media

--- a/contact.html
+++ b/contact.html
@@ -61,12 +61,13 @@
 	<footer class="page-footer">
 		<p>Find me on:</p>
 		<div class="social-media">
-			<!-- Github icon -->
-			<img src="img/github_icon.svg" alt="Github">
-			<!-- Facebook icon -->
-			<img src="img/facebook_icon.svg" alt="Facebook">
-			<!-- Instagram icon -->
-			<img src="img/instagram_icon.svg" alt="Instagram">
+			<a href="https://github.com/nickhoke24" target="_blank"><img src="img/github_icon.svg" alt="Github" /></a>
+
+			<a href="https://www.linkedin.com/in/nickhoke24" target="_blank"><img src="img/linkedin_icon.svg"
+					alt="LinkedIn" /></a>
+
+			<a href="https://www.instagram.com/nickhoke24/" target="_blank"><img src="img/instagram_icon.svg"
+					alt="Instagram" /></a>
 		</div>
 	</footer>
 	<script src="js/tota11y.min.js"></script>
