Updated favicon and pop out page for projects

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Nick Hoke's Portfolio</title>
-	<link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico" />
+	<link rel="shortcut icon" type="image/png" href="/img/nh_favicon.png" />
 	<link rel="stylesheet" type="text/css"
 		href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
 	<link href="https://fonts.googleapis.com/css?family=Baloo+Thambi+2:400,700&display=swap" rel="stylesheet" />
@@ -40,7 +40,7 @@
 		<p>
 			Hi! My name is Nick Hoke and I am an aspiring web developer currently residing in Indianapolis, Indiana.
 		</p>
-		<a href="https://nickhoke24.github.io/portfolio-website/work.html">Check out some of my code</a>
+		<a href="https://nickhoke24.github.io/portfolio-website/work.html" target="_blank">Check out some of my code</a>
 	</div>
 	<footer class="page-footer">
 		<p>Find me on:</p>
