--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Nick Hoke's Projects</title>
-  <link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico" />
+	<link rel="shortcut icon" type="image/png" href="/img/nh_favicon.png" />
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Baloo+Thambi+2:400,700&display=swap" rel="stylesheet" />
@@ -42,8 +42,8 @@
       <div class="grid_item">
         <h2>Portfolio Site</h2>
         <p>Static website built with HTML and CSS (this website).</p>
-        <a href="https://nickhoke24.github.io/portfolio-website/">Project Website</a><br />
-        <a href="https://github.com/nickhoke24/portfolio-website.git">GitHub Repository</a>
+        <a href="https://nickhoke24.github.io/portfolio-website/" target="_blank">Project Website</a><br />
+        <a href="https://github.com/nickhoke24/portfolio-website.git" target="_blank">GitHub Repository</a>
       </div>
       <div class="grid_item">
         <h2>Pokedex</h2>
@@ -52,8 +52,8 @@
           JavaScript that loads data from an external API and enables the
           viewing of data points in detail.
         </p>
-        <a href="https://nickhoke24.github.io/jquery-pokedex/">Project Website</a><br />
-        <a href="https://github.com/nickhoke24/jquery-pokedex.git">GitHub Repository</a>
+        <a href="https://nickhoke24.github.io/jquery-pokedex/" target="_blank">Project Website</a><br />
+        <a href="https://github.com/nickhoke24/jquery-pokedex.git" target="_blank">GitHub Repository</a>
       </div>
       <div class="grid_item">
         <h2>MyFlix Database</h2>
@@ -63,8 +63,8 @@
           where they can check out director and genre information, and add or
           remove favorite movies.
         </p>
-        <a href="https://myflixdbnickhoke.herokuapp.com/client">Project Website</a><br />
-        <a href="https://github.com/nickhoke24/movie.api.git">GitHub Repository</a>
+        <a href="https://myflixdbnickhoke.herokuapp.com/client" target="_blank">Project Website</a><br />
+        <a href="https://github.com/nickhoke24/movie.api.git" target="_blank">GitHub Repository</a>
       </div>
       <div class="grid_item">
         <h2>Quiz App</h2>
@@ -73,8 +73,8 @@
           take various quizzes. Once completed, a user can see their results
           and go back to choose another quiz.
         </p>
-        <a href="https://nickhoke24.github.io/my-awesome-quiz-app/welcome">Project Website</a><br />
-        <a href="https://github.com/nickhoke24/my-awesome-quiz-app.git">GitHub Repository</a>
+        <a href="https://nickhoke24.github.io/my-awesome-quiz-app/welcome" target="_blank">Project Website</a><br />
+        <a href="https://github.com/nickhoke24/my-awesome-quiz-app.git" target="_blank">GitHub Repository</a>
       </div>
       <div class="grid_item">
         <h2>ToDo List</h2>
@@ -82,8 +82,8 @@
           Created with Vue.js, users can add new items, edit the list, mark
           objects as completed and delete items from list.
         </p>
-        <a href="https://nickhoke24.github.io/to-do-list-vuejs/">Project Website</a><br />
-        <a href="https://github.com/nickhoke24/to-do-list-vuejs.git">GitHub Repository</a>
+        <a href="https://nickhoke24.github.io/to-do-list-vuejs/" target="_blank">Project Website</a><br />
+        <a href="https://github.com/nickhoke24/to-do-list-vuejs.git" target="_blank">GitHub Repository</a>
       </div>
       <div class="grid_item">
         <h2>Your project</h2>
@@ -93,7 +93,7 @@
           React, Node.js, and Angular. I am also happy to learn other
           technologies if needed.
         </p>
-        <a href="https://nickhoke24.github.io/portfolio-website/contact.html">Contact Me</a>
+        <a href="https://nickhoke24.github.io/portfolio-website/contact.html" target="_blank">Contact Me</a>
       </div>
     </div>
   </section>
