--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Contact Nick Hoke</title>
-	<link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico">
+	<link rel="shortcut icon" type="image/png" href="/img/nh_favicon.png" />
 	<link rel="stylesheet" type="text/css"
 		href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
 	<link href="https://fonts.googleapis.com/css?family=Baloo+Thambi+2:400,700&display=swap" rel="stylesheet">
